--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "angular-touch": "^1.3.0",
+    "angular-ui-router": "~0.2.13",
+    "animate.css": "~3.2.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
