--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "yookore",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "angular-animate": "^1.3.14"
+  },
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
