--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.12.0",
     "crypto": "0.0.3",
     "express": "^4.12.0",
-    "mongoose": "^3.8.24"
+    "jwt-simple": "^0.2.0",
+    "mongoose": "^3.8.24",
+    "nodemon": "^1.3.7"
   }
 }
