--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,11 @@
     "crypto": "0.0.3",
     "express": "^4.12.0",
     "jwt-simple": "^0.2.0",
+    "mongo-express": "^0.20.0",
     "mongoose": "^3.8.24",
+    "mongoose-delete": "^0.1.1",
+    "mongoose-times": "^0.1.0",
+    "morgan": "^1.5.1",
     "nodemon": "^1.3.7"
   }
 }
