--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.13",
-    "animate.css": "~3.2.1"
+    "animate.css": "~3.2.1",
+    "angular-moment": "~0.9.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
